created the first file

--- a/index.html
+++ b/index.html
@@ -1,13 +1,29 @@
 <!DOCTYPE html>
 <html>
-<body>
-
-<h1>Heading 1</h1>
-<h2>Heading 2</h2>
-<h3>Heading 3</h3>
-<h4>Heading 4</h4>
-<h5>Heading 5</h5>
-<h6>Heading 6</h6>
-
-</body>
+	<head>
+		<title>Priyanka Mary Mammrn</title>
+	</head>
+	<body>
+		<nav>
+    		<ul>
+        		<li><a href="/">Home</a></li>
+	        	<li><a href="/about">About</a></li>
+        		<li><a href="/cv">CV</a></li>
+        		<li><a href="/blog">Blog</a></li>
+    		</ul>
+		</nav>
+		<div class="container">
+    		<div class="blurb">
+        		<h1>Hi there, I'm Priyanka!</h1>
+				<p>I<em>A</em> D<a href="/about">Read more about my life...</a></p>
+    		</div><!-- /.blurb -->
+		</div><!-- /.container -->
+		<footer>
+    		<ul>
+        		<li><a href="mailto:priyankamarymammen@gmail.com">email</a></li>
+        		
+			</ul>
+		</footer>
+	</body>
 </html>
+4
